<resources>
    <string name="app_name">Client1</string>
    <string name="write_text">Веедите текст</string>
    <string name="send">Отправить</string>
    <string name="write_name">Ввести логин</string>
    <string name="write_pwd">Ввести пароль</string>
    <string name="register">Зарегестрироваться</string>
    <string name="sign_in">Войти</string>
    <string name="doneBtn">Сделано</string>
    <string name="task_title">Задание: </string>
    <string name="address">Адрес: </string>
    <string name="what_to_do">Что сделать: </string>
    <string name="time_spot">Крайний срок: </string>
    <string name="commentFromUser">Комментарий </string>
    <string name="tel">Контакты: </string>
    <string name="logout">Выйти </string>
    <string name="users">Пользователи </string>
    <string name="refresh">Обновить </string>
    <string name="need_help">Помощь </string>
    <string name="disagree">Отказ </string>

    <string name="login">Логин: </string>
    <string name="fio">ФИО: </string>
    <string name="role">Права: </string>
    <string name="phone">Телефон: </string>
    <string name="email">Почта: </string>

    <string name="make_new_user">Создать пользователя </string>
    <string name="make_tasks">Создание заявки </string>
    <string name="correction_task">Изменение заявки </string>
    <string name="make_address">Создание объектов </string>
    <string name="watch_address">Просмотр объектов </string>
    <string name="correction_status">Корректировка статуса </string>
    <string name="make_executor">Назначить исполнителя </string>
    <string name="correction_executor">Изменить исполнителя </string>
    <string name="watch_tasks">Просмотр заявок </string>
    <string name="comment_tasks">Комментирование заявок </string>
    <string name="change_password">Смена пароля </string>

    <string name="org_name">Имя: </string>
    <string name="important">Важность: </string>
    <string name="type_task">Тип заявки: </string>
    <string name="task_body">Что нужно сделать</string>
    <string name="done_time">Крайний срок выполнения </string>
    <string name="user_name">Исполнитель </string>
    <string name="task_adress">Адрес заказчика</string>
    <string name="telephone">Телефон заказчика </string>
    <string name="create_task">Создать задание </string>
    <string name="addresses">Адреса</string>
    <string name="password">Пароль:</string>
    <string name="create">Создать</string>
    <string name="user_id">id юзера, можно только больше</string>
    <string name="choose_date">Выбрать дату</string>
    <string name="inside_ip">Внутренняя сеть</string>
    <string name="user_name_task">Имя пользователя:</string>
    <string name="map">Карта</string>
    <string name="change_task">Изменить задание</string>
    <string name="remove">удалить</string>
    <string name="take">Взять себе</string>
    <string name="done_task">Исполнено</string>
</resources>
