<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="ifRoom"
        android:icon="@drawable/quit"
        />

    <item android:id="@+id/users"
        android:title="@string/users"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_name" />

    <!--<item android:id="@+id/refresh"-->
        <!--android:title="@string/refresh"-->
        <!--app:showAsAction="ifRoom"-->
        <!--android:icon="@drawable/refresh" />-->

    <item android:id="@+id/address"
        android:title="@string/addresses"
        app:showAsAction="ifRoom"
        android:icon="@drawable/address" />
</menu>